# nbs-term

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  __main__.py  config.py  goal.md  nbsterm.py  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: architecture.md  colour-space.md  configuration.md  development.md  testing-workbook.md
docs/feature-requests/: bold-font-width.md  tmux-integration.md
feature-requests/: auth-refactor-plan.md  ssh-interaction-handler-integration.md
scripts/: check-wide.py  diag-mouse-offset.py  diag-widths.py  mac-setup-phc.sh  mac-setup.sh  probe-no-tabs.py  windows-setup-phc.ps1  windows-setup.ps1
src/: color.phc  color_utils.phc  config_structs.phc  extension.phc  input.phc  p1_5_notebook.phc  p1_hello.phc  p2_render.phc  p3_pty.phc  pty.phc  render.phc  render_bitmap.phc  screen.phc  selection.phc  sgr.phc  tk_render.phc  vga_font_8x16.h  vt_parser.phc
tests/: test_color_functions.py  test_config.py  test_grid_contract.py  test_gui_logic.py  test_integration.py  test_orchestration.py  test_parser.c  test_render_bitmap.c  test_render_layout_equivalence.py  test_screen.c  test_ssh_integration.py  visual-test-card.md  visual-test-card.txt
tools/: test_glyph_extract.py
